Moving yaml extraction to subscriber

--- a/ros2_ws/src/image_provider/CMakeLists.txt
+++ b/ros2_ws/src/image_provider/CMakeLists.txt
@@ -19,10 +19,10 @@ find_package(std_msgs REQUIRED)
 add_executable(image_publisher src/image_publisher.cpp)
 add_executable(image_subscriber src/image_subscriber.cpp)
 
-ament_target_dependencies(image_publisher rclcpp sensor_msgs OpenCV std_msgs yaml-cpp)
-ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV)
+ament_target_dependencies(image_publisher rclcpp sensor_msgs OpenCV std_msgs)
+ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV yaml-cpp)
 
-target_link_libraries(image_publisher ${YAML_CPP_LIBRARIES})
+target_link_libraries(image_subscriber ${YAML_CPP_LIBRARIES})
 
 install(TARGETS image_subscriber DESTINATION lib/${PROJECT_NAME})
 install(TARGETS image_publisher DESTINATION lib/${PROJECT_NAME})
