--- a/ros2_ws/src/image_provider/CMakeLists.txt
+++ b/ros2_ws/src/image_provider/CMakeLists.txt
@@ -20,9 +20,7 @@ add_executable(image_publisher src/image_publisher.cpp)
 add_executable(image_subscriber src/image_subscriber.cpp)
 
 ament_target_dependencies(image_publisher rclcpp sensor_msgs OpenCV std_msgs)
-ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV yaml-cpp)
-
-target_link_libraries(image_subscriber ${YAML_CPP_LIBRARIES})
+ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV)
 
 install(TARGETS image_subscriber DESTINATION lib/${PROJECT_NAME})
 install(TARGETS image_publisher DESTINATION lib/${PROJECT_NAME})
