Moving the calibration file

--- a/ros2_ws/src/image_provider/CMakeLists.txt
+++ b/ros2_ws/src/image_provider/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(OpenCV REQUIRED)
 find_package(std_msgs REQUIRED)
+find_package(ament_index_cpp REQUIRED)
 # uncomment the following section in order to fill in
 # further dependencies manually.
 # find_package(<dependency> REQUIRED)
@@ -20,12 +21,15 @@ add_executable(image_publisher src/image_publisher.cpp)
 add_executable(image_subscriber src/image_subscriber.cpp)
 
 ament_target_dependencies(image_publisher rclcpp sensor_msgs OpenCV std_msgs)
-ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV yaml-cpp)
+ament_target_dependencies(image_subscriber rclcpp sensor_msgs OpenCV yaml-cpp ament_index_cpp)
 
 target_link_libraries(image_subscriber ${YAML_CPP_LIBRARIES})
 
+
 install(TARGETS image_subscriber DESTINATION lib/${PROJECT_NAME})
 install(TARGETS image_publisher DESTINATION lib/${PROJECT_NAME})
+install(DIRECTORY config DESTINATION share/${PROJECT_NAME})
+
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
