--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -39,7 +39,11 @@ jobs:
           cache: 'pip'
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install mypy
+            python -m pip install --upgrade pip
+            pip install -r requirements-gui.txt
+            pip install opencv-contrib-python
+            pip install flask
+            pip install PyYAML types-PyYAML
+            pip install numpy types-numpy
       - name: Lint with mypy
         run: mypy . -v
