--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -42,5 +42,6 @@ jobs:
             python -m pip install --upgrade pip
             pip install -r requirements-gui.txt
             pip install PyYAML types-PyYAML
+            pip install mypy
       - name: Lint with mypy
         run: mypy . -v
